# cuda-cube

./: .gitignore  CMakeLists.txt  README.md  consts.cu  consts.cuh  corner_edge_or_pattern_database.7z  corner_neighbours.7z  edge_or_neighbours  edge_or_symmetries  edge_perm_edge_or_pattern_database.7z  edge_perm_neighbours.7z  main.cu
